Fixed incorrect character in Esperanto translation.

--- a/po/eo.po
+++ b/po/eo.po
@@ -159,7 +159,7 @@ msgstr "Ĉu uzi la adresenigon kiel serĉkampo?"
 
 #: ../libyelp/yelp-location-entry.c:433 ../src/yelp-window.c:270
 msgid "Search..."
-msgstr "Serĉi..."
+msgstr "Serĉi..."
 
 #: ../libyelp/yelp-location-entry.c:776
 msgid "Clear the search text"
