--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-26 14:11+0200\n"
-"PO-Revision-Date: 2011-08-21 13:41+0200\n"
+"POT-Creation-Date: 2011-10-11 21:20+0200\n"
+"PO-Revision-Date: 2011-10-11 21:20+0200\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
-"Language-Team: Catalan <tradgnome@softcatala.org>\n"
+"Language-Team: català; valencià <tradgnome@softcatala.org>\n"
 "Language: ca-XV\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bits\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: ../libyelp/yelp-bz2-decompressor.c:146
@@ -502,6 +502,10 @@ msgstr "Aplicacions"
 #: ../src/yelp-window.c:302
 msgid "A YelpApplication instance that controls this window"
 msgstr "Una instància de YelpApplication que controla esta finestra"
+
+#: ../src/yelp-window.c:429
+msgid "Read Link _Later"
+msgstr "Ho _llegiré més avant"
 
 #: ../src/yelp-window.c:526
 msgid "Find:"
