--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,29 @@
+3.2.1
+=====
+* Fixed a format string for an error (Dexter Morgan)
+* Updated translations:
+  bg          (Alexander Shopov)
+  ca          (Gil Forcada)
+  ca@valencia (Carles Ferrando)
+  de          (Mario Blättermann)
+  en_GB       (Bruce Cowan)
+  eo          (Tiffany Antopolski)
+  es          (Daniel Mustieles)
+  fi          (Tommi Vainikainen)
+  fr          (Bruno Brouard)
+  gl          (Fran Dieguez)
+  hu          (Gabor Kelemen)
+  ko          (Changwoo Ryu)
+  lt          (Aurimas Černius)
+  nl          (Wouter Bolsterlee)
+  pl          (Piotr Drąg)
+  sl          (Matej Urbančič)
+  sr          (Мирослав Николић)
+  sr@latin    (Мирослав Николић)
+  sv          (Daniel Nylander)
+  te          (krishnababu k)
+  uk          (Daniel Korostil)
+
 3.2.0
 =====
 * Open GNOME Help from the new system by default (Matthias Clasen)
