--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+3.3.1
+=====
+* Added Share button to IM, email, or copy page link
+* Allow multiple package with install links
+* Set right-click menu for http and install links
+* Link to full search when loading a page from external search
+* Dropped jquery-ui in favor of CSS transitions
+* Updated translations:
+  be    (Ihar Hrachyshka)
+  bg    (Alexander Shopov)
+  en_GB (Bruce Cowan)
+  es    (Jorge González)
+  gl    (Fran Dieguez)
+  he    (Yaron Shahrabani)
+  ko    (Changwoo Ryu)
+  nb    (Kjartan Maraas)
+  sl    (Matej Urbančič)
+  sv    (Daniel Nylander)
+
 3.2.0
 =====
 * Open GNOME Help from the new system by default (Matthias Clasen)
