--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+3.3.2
+=====
+* Fixed conditional processing check for GNOME 2 environments
+* Fixed racy insertion of link to full search results
+* Don't call deprecated g_thread_init, #663285
+* Updated translations:
+  be       (Kasia Bondarava)
+  cs       (Marek Černocký)
+  de       (Mario Blättermann)
+  eo       (Kristjan SCHMIDT)
+  gl       (Fran Diéguez)
+  nb       (Kjartan Maraas)
+  sl       (Matej Urbančič)
+  sv       (Daniel Nylander)
+  te       (Praveen Illa)
+  tr       (Muhammet Kara)
+  zh_HK    (Pin-hsien Li)
+  zh_TW    (Pin-hsien Li)
+
 3.3.1
 =====
 * Added Share button to IM, email, or copy page link
