--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.3.3
+=====
+* Adjust CSS for yelp-xsl changes
+* Reverting Share button for 3.4
+* Don't segfault without dbus, #660579 (Michael Biebl)
+* Updated translations:
+  fa    (Arash Mousavi)
+  fi    (Timo Jyrinki)
+  mk    (Jovan Naumovski)
+
 3.3.2
 =====
 * Fixed conditional processing check for GNOME 2 environments
