Updated Esperanto translation

--- a/po/eo.po
+++ b/po/eo.po
@@ -9,6 +9,7 @@
 # Fabio Ruiz ORTEGA < >, 2009.
 # Michael MORONI, <haikara90@gmail.com>, 2009.
 # Kim RIBEIRO <ribekim@gmail.com>, 2009.
+# Patrick (Petriko) OUDEJANS < >, 2011.
 # Tiffany Antopolski <tiffany.antopolski@gmail.com>, 2011.
 # Kristjan SCHMIDT <kristjan.schmidt@googlemail.com>, 2010, 2011, 2012.
 #
@@ -27,7 +28,7 @@ msgstr ""
 "Language: eo\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Virtaal 0.7.1-rc1\n"
-"X-Launchpad-Export-Date: 2011-05-28 08:24+0000\n"
+"X-Launchpad-Export-Date: 2012-02-19 16:04+0000\n"
 "X-Project-Style: gnome\n"
 
 #. ID: install.tooltip
@@ -106,7 +107,7 @@ msgstr "Indeksite"
 
 #: ../libyelp/yelp-document.c:269
 msgid "Whether the document content has been indexed"
-msgstr "Ĉu indeksi la enhavon de la dokumento?"
+msgstr "Ĉu la dokumenta enhavo estas indeksita aŭ ne?"
 
 #: ../libyelp/yelp-document.c:277
 msgid "Document URI"
@@ -280,7 +281,7 @@ msgstr "_Reen"
 
 #: ../libyelp/yelp-view.c:141
 msgid "_Forward"
-msgstr "Antaŭen"
+msgstr "_Antaŭen"
 
 #: ../libyelp/yelp-view.c:146
 msgid "_Previous Page"
@@ -348,7 +349,7 @@ msgstr "La piktogramo de la nun vidanta paĝo"
 
 #: ../libyelp/yelp-view.c:720
 msgid "You do not have PackageKit. Package install links require PackageKit."
-msgstr "Vi ne havas PackageKit. Pakaĵ-instalil-ligiloj necesas PackageKit."
+msgstr "Vi ne havas PackageKit. Pakaĵ-instalil-ligiloj postulas na PackageKit."
 
 #: ../libyelp/yelp-view.c:1013
 msgid "Save Image"
@@ -401,7 +402,7 @@ msgstr "_Kopii tekston"
 
 #: ../libyelp/yelp-view.c:1394
 msgid "C_opy Code Block"
-msgstr "K_onservi kodgrupon"
+msgstr "K_opii kodgrupon"
 
 #: ../libyelp/yelp-view.c:1399
 msgid "Save Code _Block As..."
