Updated Esperanto translation

--- a/po/eo.po
+++ b/po/eo.po
@@ -19,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&keywords=I18N+L10N&component=General\n"
 "POT-Creation-Date: 2012-02-01 12:03+0000\n"
-"PO-Revision-Date: 2012-02-19 16:56+0100\n"
+"PO-Revision-Date: 2012-02-19 17:07+0100\n"
 "Last-Translator: Kristjan SCHMIDT <kristjan.schmidt@googlemail.com>\n"
 "Language-Team: Esperanto <gnome-l10n-eo@lists.launchpad.net>\n"
 "MIME-Version: 1.0\n"
@@ -107,7 +107,7 @@ msgstr "Indeksite"
 
 #: ../libyelp/yelp-document.c:269
 msgid "Whether the document content has been indexed"
-msgstr "Ĉu la dokumenta enhavo estas indeksita aŭ ne?"
+msgstr "Ĉu la dokumenta enhavo estas indeksita?"
 
 #: ../libyelp/yelp-document.c:277
 msgid "Document URI"
