--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,45 @@
+3.3.92
+======
+* Fixed links to page #fragments, bug #671018
+* Updated translations:
+  as    (Nilamdyuti Goswami)
+  be    (Ihar Hrachyshka)
+  bg    (Ivaylo Valkov)
+  ca    (David Planella)
+  da    (Kenneth Nielsen)
+  de    (Mario Blättermann)
+  en_GB (Bruce Cowan)
+  eo    (Tiffany Antopolski)
+  es    (Daniel Mustieles)
+  et    (Mattias Põldaru)
+  eu    (Inaki Larranaga Murgoitio)
+  fa    (Arash Mousavi)
+  fi    (Timo Jyrinki)
+  fr    (Bruno Brouard)
+  gl    (Fran Diéguez)
+  he    (Yaron Shahrabani)
+  hi    (Rajesh Ranjan)
+  hu    (Gabor Kelemen)
+  it    (Milo Casagrande)
+  ko    (Changwoo Ryu)
+  lv    (Anita Reitere)
+  nb    (Kjartan Maraas)
+  nl    (Hannie Dumoleyn)
+  pa    (A S Alam)
+  pl    (Piotr Drąg)
+  pt    (Duarte Loreto)
+  pt_BR (Antonio Fernandes C. Neto)
+  ru    (Yuri Myasoedov)
+  sl    (Matej Urbančič)
+  sr    (Мирослав Николић)
+  sr@latin (Мирослав Николић)
+  sv    (Daniel Nylander)
+  ta    (Dr.T.Vasudevan)
+  te    (Krishnababu Krothapalli)
+  uk    (Daniel Korostil)
+  zh_HK (Chao-Hsiung Liao)
+  zh_TW (Chao-Hsiung Liao)
+
 3.3.4
 =====
 * Auto-reload Mallard documents
