--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+3.4.0
+=====
+* Updated translations:
+  ar    (Ibrahim Saed)
+  cs    (Marek Černocký)
+  gu    (Sweta Kothari)
+  ml    (Praveen Arimbrathodiyil)
+  tr    (Muhammet Kara)
+  vi    (Nguyễn Thái Ngọc Duy)
+  zh_CN (YunQiang Su)
+
 3.3.92
 ======
 * Fixed links to page #fragments, bug #671018
