[l10n]Updated Catalan (Valencian) translation

--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the yelp package.
 # Jordi Mallach <jordi@sindominio.net>, 2002, 2003, 2004, 2005, 2006.
 # Gil Forcada <gilforcada@guifi.net>, 2007, 2008, 2009, 2010, 2011.
+# Jordi Serratosa <jordis@softcatala.cat>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-27 22:36+0200\n"
+"POT-Creation-Date: 2012-04-10 21:00+0200\n"
 "PO-Revision-Date: 2012-03-04 12:01+0100\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
 "Language-Team: català; valencià <tradgnome@softcatala.org>\n"
@@ -505,7 +506,7 @@ msgstr "_Suprimeix l'adreça d'interés"
 
 #: ../src/yelp-window.c:265
 msgid "Find in Page..."
-msgstr "Cerca a la pàgina ..."
+msgstr "Cerca a la pàgina..."
 
 #: ../src/yelp-window.c:275
 msgid "Open Location"
@@ -1506,7 +1507,7 @@ msgstr "Obtingueu ajuda per al GNOME"
 #~ msgstr "_Quant a"
 
 #~ msgid "Copy _Email Address"
-#~ msgstr "_Copia l'adreça de correu"
+#~ msgstr "_Copia l'adreça electrònica"
 
 #~ msgid "Help Browser"
 #~ msgstr "Navegador d'ajuda"
