--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+3.4.1
+=====
+* Updated translations:
+  ca    (Jordi Serratosa)
+  ca@valencia (Carles Ferrando)
+  el    (George Stefanakis)
+  id    (Andika Triwidada)
+  lt    (Aurimas Černius)
+
 3.4.0
 =====
 * Updated translations:
